tests/kulezi_tests/good/error_is_return02.lat
int main() {
    f();
    return 0;
}

void f() {
    int x = 10;
    while (true) {
        x--;
        if (x < 0) error();
    }
}