tests/kulezi_tests/bad/assign_function_result.lat
class A {
    int[] x;
}

A xd() {
    return new A;
}

int main() {
    xd() = new A;
}